@@ -10150,8 +10150,6 @@ operator|new
 name|String
 index|[]
 block|{
-literal|"queue"
-block|,
 literal|"-status"
 block|,
 literal|"queueA"
@@ -10364,8 +10362,6 @@ operator|new
 name|String
 index|[]
 block|{
-literal|"queue"
-block|,
 literal|"-status"
 block|,
 literal|"queueA"
@@ -10469,6 +10465,128 @@ operator|.
 name|println
 argument_list|(
 literal|"\tAccessible Node Labels : "
+argument_list|)
+expr_stmt|;
+name|pw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|String
+name|queueInfoStr
+init|=
+name|baos
+operator|.
+name|toString
+argument_list|(
+literal|"UTF-8"
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|queueInfoStr
+argument_list|,
+name|sysOutStream
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testGetQueueInfoWithNonExistedQueue ()
+specifier|public
+name|void
+name|testGetQueueInfoWithNonExistedQueue
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|queueName
+init|=
+literal|"non-existed-queue"
+decl_stmt|;
+name|QueueCLI
+name|cli
+init|=
+name|createAndGetQueueCLI
+argument_list|()
+decl_stmt|;
+name|when
+argument_list|(
+name|client
+operator|.
+name|getQueueInfo
+argument_list|(
+name|any
+argument_list|(
+name|String
+operator|.
+name|class
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+name|int
+name|result
+init|=
+name|cli
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-status"
+block|,
+name|queueName
+block|}
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|1
+argument_list|,
+name|result
+argument_list|)
+expr_stmt|;
+empty_stmt|;
+name|ByteArrayOutputStream
+name|baos
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|PrintWriter
+name|pw
+init|=
+operator|new
+name|PrintWriter
+argument_list|(
+name|baos
+argument_list|)
+decl_stmt|;
+name|pw
+operator|.
+name|println
+argument_list|(
+literal|"Cannot get queue from RM by queueName = "
+operator|+
+name|queueName
+operator|+
+literal|", please check."
 argument_list|)
 expr_stmt|;
 name|pw
